Add Metabase link in admin menu

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,10 @@
 ---
 en:
   decidim:
+    admin:
+      metabase:
+        menu:
+          title: Metabase
     components:
       metabase:
         name: Metabase
