Add Metabase Iframes with Metabase Service

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
       metabase:
         menu:
           title: Metabase
+        title: Metabase#Index
     components:
       metabase:
         name: Metabase
