Add not found message in dashboard index

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,4 @@ en:
         menu:
           title: Metabase
         title: Metabase#Index
-    components:
-      metabase:
-        name: Metabase
+        not_found: No dashboard found
