Add message if metabase is disabled

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,7 @@ en:
   decidim:
     admin:
       metabase:
+        disabled: Metabase module seems to be disabled
         menu:
           title: Metabase
         title: Metabase dashboards
